--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.23.0",
     "formik": "^2.4.0",
     "moment": "^2.29.4",
+    "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bs-datatable": "^3.11.2",
